# 2CCPP-Project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doxygen_warning.txt
.github/workflows/: build.yml
include/: Board.cpp  Board.h  Display_Board.cpp  Display_Board.h  Player.cpp  Player.h  Utils_example.hpp  exmpl.hpp
include/Board/: Board.hpp
include/Bonus/: Bonus.hpp  ExchangeBonus.hpp  SteelBonus.hpp  StoneBonus.hpp
include/Cursor/: CursorController.hpp
include/Display_Board/: Display_Board.hpp
include/Game/: Game.hpp
include/Player/: Player.hpp
include/Render/: Renderer.hpp
include/Tile/: InitTiles.hpp  Shapes.json  Tile.hpp  TileQueue.hpp
src/: Utils_example.cpp  main.cpp
src/Board/: Board.cpp
src/Cursor/: CursorController.cpp
src/Display_Board/: Display_Board.cpp
src/Game/: Game.cpp
src/Player/: Player.cpp
src/Render/: Renderer.cpp
src/Tile/: InitTiles.cpp  Shapes.json  Tile.cpp  TileQueue.cpp
tests/: tests.cpp
